--- a/app/src/main/res/layout/widget_collection_item.xml
+++ b/app/src/main/res/layout/widget_collection_item.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp">
 
-    <TextView android:id="@+id/stock_symbol"
+    <TextView
+        android:id="@+id/stock_symbol"
         style="@style/StockSymbolTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,7 +23,8 @@
         android:layout_weight="1"
         android:gravity="end">
 
-        <TextView android:id="@+id/bid_price"
+        <TextView
+            android:id="@+id/bid_price"
             style="@style/BidPriceTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,11 +32,12 @@
             android:paddingRight="10sp"
             tools:text="1000.00" />
 
-        <TextView android:id="@+id/change"
-            android:background="@drawable/percent_change_pill"
+        <TextView
+            android:id="@+id/change"
             style="@style/PercentChangeTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/percent_change_pill"
             android:paddingLeft="3dp"
             android:paddingRight="3dp"
             tools:text="100%" />
