--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -6,7 +6,9 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <TextView
         android:id="@+id/stock_symbol"
@@ -27,6 +29,9 @@
             style="@style/BidPriceTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="10sp"
+            android:paddingStart="10sp"
+            android:paddingEnd="10sp"
             android:paddingRight="10sp"
             tools:text="1000.00" />
 
@@ -36,8 +41,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/percent_change_pill"
+            android:paddingStart="3dp"
             android:paddingLeft="3dp"
             android:paddingRight="3dp"
+            android:paddingEnd="3dp"
             tools:text="100%" />
     </LinearLayout>
 </LinearLayout>
