--- a/app/src/main/res/layout/widget_collection.xml
+++ b/app/src/main/res/layout/widget_collection.xml
@@ -3,11 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#a0000000"
+    android:background="#CCD5B4"
     android:minHeight="@dimen/widget_default_height"
     android:minWidth="@dimen/widget_default_width"
     android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
+    android:paddingStart="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingEnd="8dp">
+
 
     <FrameLayout
         android:id="@+id/widget"
@@ -21,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/widget_title"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="@dimen/md_title_textsize" />
     </FrameLayout>
 
