--- a/app/src/main/res/layout/widget_collection_item.xml
+++ b/app/src/main/res/layout/widget_collection_item.xml
@@ -13,6 +13,8 @@
         android:id="@+id/stock_symbol"
         style="@style/StockSymbolTextStyle"
         android:layout_width="wrap_content"
+        android:textColor="@android:color/black"
+
         android:layout_height="wrap_content"
         android:gravity="start|center_vertical"
         tools:text="GOOG" />
@@ -28,6 +30,8 @@
             style="@style/BidPriceTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+
             android:paddingLeft="10sp"
             android:paddingRight="10sp"
             tools:text="1000.00" />
